--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,5 +5,4 @@ services:
       dockerfile: Dockerfile.dev
     command: sh -c "python telegram/main.py"
     env_file: telegram/.env
-    volumes:
-        - ./shared:/app/shared
+    restart: always
