--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -3,11 +3,7 @@ name = "telegram"
 version = "0.1.0"
 description = "Add your description here"
 authors = [{ name = "Mykyta Prokaiev", email = "mykytaprokaiev@gmail.com" }]
-dependencies = [
-    "python-dotenv>=1.0.1",
-    "aiogram>=3.10.0",
-    "shared @ file:///${PROJECT_ROOT}/../shared",
-]
+dependencies = ["python-dotenv>=1.0.1", "aiogram>=3.10.0"]
 readme = "README.md"
 requires-python = ">= 3.12"
 
@@ -16,8 +12,8 @@ managed = true
 dev-dependencies = ["ruff>=0.5.6", "mypy>=1.11.1"]
 
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 
 [tool.pdm]
