--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -3,7 +3,12 @@ name = "telegram"
 version = "0.1.0"
 description = "Add your description here"
 authors = [{ name = "Mykyta Prokaiev", email = "mykytaprokaiev@gmail.com" }]
-dependencies = ["python-dotenv>=1.0.1", "aiogram>=3.10.0"]
+dependencies = [
+    "python-dotenv>=1.0.1",
+    "aiogram>=3.10.0",
+    "httpx>=0.27.0",
+    "pydantic>=2.8.2",
+]
 readme = "README.md"
 requires-python = ">= 3.12"
 
@@ -15,9 +20,8 @@ dev-dependencies = ["ruff>=0.5.6", "mypy>=1.11.1"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-
-[tool.pdm]
-distribution = true
+[tool.hatch.build.targets.wheel]
+packages = ["src/telegram"]
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
