--- a/telegram/pyproject.toml
+++ b/telegram/pyproject.toml
@@ -21,7 +21,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/telegram"]
+packages = ["src"]
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
