--- a/telegram/Dockerfile
+++ b/telegram/Dockerfile
@@ -1,5 +1,6 @@
-FROM python:3.12-slim
+FROM python:3.12-slim-bullseye
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
 WORKDIR /app
 COPY . .
-RUN PYTHONDONTWRITEBYTECODE=1 pip install --no-cache-dir -r requirements.lock
+RUN PYTHONDONTWRITEBYTECODE=1 uv pip install --system --no-cache-dir -r requirements.lock
