--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: mykytaproks/vpn_bot_telegram:${TAG}
     command: sh -c "poetry run python telegram/main.py"
     environment:
-      - LINODE_API_KEY=${LINODE_API_KEY}
+      - API_KEY_LINODE=${API_KEY_LINODE}
       - ALLOWED_CHAT_IDS=${ALLOWED_CHAT_IDS}
       - STACKSCRIPT_ID=${STACKSCRIPT_ID}
       - SHADOWSOCKS_PASSWORD=${SHADOWSOCKS_PASSWORD}
